#ifndef BLOBENGINE_REACTION_HPP
#define BLOBENGINE_REACTION_HPP

enum Reaction {
	BOUNCE,
	STOP,
	ROLL,
	IGNORE
};

#endif //BLOBENGINE_REACTION_HPP
